// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@font-face in global 1`] = `
<div>
  <style>
    @font-face {
      font-family: some-name;
    }
  </style>
</div>
`;

exports[`css call composition 1`] = `
Object {
  "name": "d4uv9l",
  "styles": ":hover{
    color: hotpink;
  }",
  "toString": [Function],
  "type": 1,
}
`;

exports[`css call to render 1`] = `
<div>
  <style>
    .emotion-0 {
      color: green;
    }
  </style>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;

exports[`css call to render with array as styles 1`] = `
Array [
  <style>
    .emotion-0 {
      color: yellow;
    }
  </style>,
  <div
    className="emotion-0"
  >
    <style>
      .emotion-1 {
        color: green;
      }
      
      .emotion-2 {
        color: hotpink;
      }
    </style>
    <div
      className="emotion-1"
    >
      something
    </div>
    <div
      className="emotion-2"
    >
      anothor thing
    </div>
  </div>,
]
`;

exports[`dynamic 1`] = `
<div>
  <style>
    .emotion-0 {
      color: hotpink;
    }
  </style>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`functions get toStringed in css calls 1`] = `
Object {
  "name": "5s8nl0",
  "styles": "
      function _ref() {};
    ",
  "toString": [Function],
  "type": 1,
}
`;

exports[`global 1`] = `
<div>
  <style>
    body {
      color: hotpink;
    }
  </style>
</div>
`;

exports[`keyframes 1`] = `
<div>
  <style>
    @-webkit-keyframes animation-1ozfi5a {
      from {
        color: green;
      }
    
      to {
        color: hotpink;
      }
    }
    
    @keyframes animation-1ozfi5a {
      from {
        color: green;
      }
    
      to {
        color: hotpink;
      }
    }
  </style>
  <style>
    .emotion-0 {
      -webkit-animation: animation-1ozfi5a;
      animation: animation-1ozfi5a;
    }
  </style>
  <div
    className="emotion-0"
  >
    animation-1ozfi5a
  </div>
</div>
`;

exports[`label in css call 1`] = `
<div>
  <style>
    .emotion-0 {
      color: hotpink;
    }
  </style>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;

exports[`object with false 1`] = `
<div>
  <style>
    .emotion-0 {
      color: hotpink;
    }
  </style>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;

exports[`string as css prop throws 1`] = `
"Strings are not allowed as css prop values, please wrap it in a css template literal from '@emotion/css' like this: css\`
            color: hotpink;
          \`"
`;

exports[`theming with the css prop 1`] = `
Array [
  <style>
    .emotion-0 {
      color: hotpink;
    }
  </style>,
  <div
    className="emotion-0"
  />,
]
`;

exports[`thing 1`] = `
<div>
  <style>
    .emotion-0 {
      display: -webkit-box;
      display: -webkit-flex;
      display: -ms-flexbox;
      display: flex;
    }
  </style>
  <div
    className="emotion-0"
  >
    something
  </div>
</div>
`;
